--- a/login_admin.html
+++ b/login_admin.html
@@ -3,201 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistem Monitoring Siswa - Admin</title>
-    <!-- Tailwind CSS CDN -->
+    <title>Login Admin - Pantau Siswa</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Font Awesome for icons (e.g., refresh button icon) -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-      xintegrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!-- Link ke file CSS eksternal (shared style) -->
-    <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="min-h-screen flex flex-col p-0">
-    <!-- Loading Overlay -->
-    <div id="loading-overlay">
-      <div class="spinner"></div>
-      <p class="mt-4 text-gray-700 text-lg font-semibold">Memuat data...</p>
+  <body class="bg-gray-100 min-h-screen flex items-center justify-center">
+    <div class="bg-white p-8 rounded-lg shadow-lg max-w-md w-full text-center">
+      <h1 class="text-2xl font-bold mb-4">Login Admin</h1>
+      <p class="mb-6">
+        Klik tombol di bawah untuk login menggunakan akun Google Anda.
+      </p>
+      <button
+        onclick="loginWithGoogle()"
+        class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700"
+      >
+        Login dengan Google
+      </button>
     </div>
 
-    <!-- Main Content Area: Sekarang bertindak sebagai kontainer fleksibel untuk menengahkan anak-anaknya -->
-    <div
-      class="main-content-area relative flex flex-col flex-grow items-center justify-center"
-    >
-      <!-- Back button to index.html -->
-      <a
-        href="index.html"
-        class="absolute top-4 left-4 p-2 bg-gray-200 rounded-full shadow hover:bg-gray-300 transition-colors z-10"
-      >
-        <i class="fas fa-arrow-left text-gray-700 text-lg"></i>
-      </a>
+    <script>
+      function loginWithGoogle() {
+        // URL Web App Google Apps Script kamu:
+        window.location.href =
+          "https://script.google.com/macros/s/AKfycbwZEByXGKCa-s4sSPHBtM5GQuZHTjNWkgDWzUgpGXkaO66_mvWiakXnufxX_jd5lYwqdw/exec";
+      }
 
-      <!-- Login Section (for Admin) -->
-      <!-- Hapus min-h-screen dari sini, sekarang ditengahkan oleh main-content-area parent -->
-      <section
-        id="login-section"
-        class="pt-4 px-4 md:px-0 w-full max-w-sm mx-auto"
-      >
-        <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">
-          Sistem Monitoring Siswa
-        </h2>
+      window.addEventListener("DOMContentLoaded", () => {
+        const params = new URLSearchParams(window.location.search);
+        const login = params.get("login");
+        const email = params.get("email");
+        const kelas = params.get("kelas");
+        const mapel = params.get("mapel");
 
-        <!-- Admin Login Form Card -->
-        <div id="unified-login-card" class="p-6 bg-white rounded-lg shadow-md">
-          <h3
-            id="login-title"
-            class="text-2xl font-semibold text-gray-800 mb-6 text-center"
-          >
-            Login Admin
-          </h3>
-          <form id="login-form" class="space-y-4">
-            <div>
-              <label for="login-email-admin" class="block text-gray-700"
-                >Email Admin:</label
-              >
-              <input
-                type="email"
-                id="login-email-admin"
-                name="email"
-                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm"
-                required
-              />
-            </div>
-            <button
-              type="submit"
-              id="main-login-button"
-              class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md transition duration-300 ease-in-out"
-            >
-              Login
-            </button>
-          </form>
-        </div>
-      </section>
-
-      <!-- Admin Configuration Section (Onboarding) -->
-      <section
-        id="admin-config-section"
-        class="section-hidden py-6 px-4 w-full max-w-2xl mx-auto"
-      >
-        <div class="bg-white p-6 rounded-lg shadow-md">
-          <h3 class="text-2xl font-bold text-gray-800 mb-6 text-center">
-            Konfigurasi Admin
-          </h3>
-          <p class="text-gray-700 text-center mb-6">
-            Selamat datang! Mohon lengkapi informasi berikut untuk memulai.
-          </p>
-
-          <form id="admin-config-form" class="space-y-6">
-            <div>
-              <label
-                for="admin-kelas-mengampu"
-                class="block text-gray-700 font-medium mb-2"
-              >
-                Kelas
-              </label>
-              <select
-                id="admin-kelas-mengampu"
-                name="Kelas_Mengampu"
-                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm"
-                required
-              >
-                <option value="">Pilih Kelas...</option>
-                <option value="I">I</option>
-                <option value="II">II</option>
-                <option value="III">III</option>
-                <option value="IV">IV</option>
-                <option value="V">V</option>
-                <option value="VI">VI</option>
-              </select>
-            </div>
-
-            <!-- Bagian untuk Menambah Mata Pelajaran Baru -->
-            <div>
-              <label
-                for="new-mapel-input"
-                class="block text-gray-700 font-medium mb-2"
-                >Tambah Mata Pelajaran Baru:</label
-              >
-              <div class="flex gap-2">
-                <input
-                  type="text"
-                  id="new-mapel-input"
-                  placeholder="Contoh: Seni Musik"
-                  class="flex-grow px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm"
-                />
-                <button
-                  type="button"
-                  id="add-new-mapel-btn"
-                  class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-md shadow-sm transition duration-300 ease-in-out"
-                >
-                  Tambah
-                </button>
-              </div>
-            </div>
-
-            <div>
-              <!-- Bagian ini diubah: label asli dengan instruksi dihapus -->
-              <div
-                id="admin-mapel-selection-container"
-                class="mt-2 flex flex-wrap gap-2 p-3 border border-gray-300 rounded-md bg-gray-50 min-h-[100px] content-start"
-              >
-                <!-- Mata pelajaran yang dipilih akan dirender di sini oleh JavaScript -->
-                <p class="text-gray-500 text-center w-full">
-                  Memuat mata pelajaran...
-                </p>
-              </div>
-            </div>
-
-            <button
-              type="submit"
-              id="submit-admin-config"
-              class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md transition duration-300 ease-in-out shadow-sm"
-            >
-              Simpan Konfigurasi
-            </button>
-          </form>
-        </div>
-      </section>
-
-      <!-- Admin Dashboard Section (Placeholder) -->
-      <section
-        id="admin-dashboard-section"
-        class="section-hidden py-6 px-4 w-full max-w-2xl mx-auto"
-      >
-        <div class="bg-white p-6 rounded-lg shadow-md text-center">
-          <h3 class="text-3xl font-bold text-gray-800 mb-4">
-            Selamat Datang di Dashboard Admin!
-          </h3>
-          <p class="text-lg text-gray-700 mb-6">
-            Email Anda:
-            <span id="dashboard-admin-email" class="font-semibold"></span>
-          </p>
-          <p class="text-gray-600">
-            Fungsi dashboard admin akan dibangun di kemudian hari. Saat ini,
-            konfigurasi Anda telah berhasil disimpan.
-          </p>
-          <button
-            id="logout-admin-btn"
-            class="mt-8 bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-md transition duration-300 ease-in-out"
-          >
-            Logout
-          </button>
-        </div>
-      </section>
-    </div>
-
-    <!-- Toast Container (Shared style) -->
-    <div id="toast-container"></div>
-
-    <!-- Link ke file JavaScript eksternal khusus admin -->
-    <script src="script_admin.js"></script>
+        if (login === "success") {
+          alert(
+            "Login berhasil sebagai: " +
+              email +
+              "\nKelas: " +
+              kelas +
+              "\nMapel: " +
+              mapel
+          );
+          // Di sini kamu bisa redirect ke halaman dashboard misalnya
+        } else if (login === "fail") {
+          alert(
+            "Login gagal. Email " + email + " tidak terdaftar sebagai admin."
+          );
+        }
+      });
+    </script>
   </body>
 </html>
