--- a/index.html
+++ b/index.html
@@ -127,13 +127,15 @@
             </button>
           </form>
 
-          <!-- Link to Admin Login Page -->
-          <a
-            href="login_admin.html"
-            class="mt-4 w-full text-center text-green-600 hover:text-green-800 font-semibold text-sm block"
+          <!-- Tombol Login Admin yang BENAR -->
+          <button
+            type="button"
+            id="admin-login-button"
+            class="mt-4 w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-md focus:outline-none focus:shadow-outline"
+            onclick="redirectToAdminLogin()"
           >
             Login sebagai Admin
-          </a>
+          </button>
         </div>
       </section>
 
