--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
           <!-- Link to Admin Login Page -->
           <a
-            href="login_admin.html"
+            href="dashboardguru.html"
             class="mt-4 w-full text-center text-green-600 hover:text-green-800 font-semibold text-sm block"
           >
             Login sebagai Admin
